# agent-quota-control

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
frontend/: index.html  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.ts  i18n.ts  proxyDisplay.ts  styles.css  types.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: CredentialSettings.tsx  LaunchPanel.tsx  MonitoringSettings.tsx  ProxySettings.tsx  QuotaCard.tsx  ToolList.tsx
src/: estimator.rs  harness.rs  main.rs  statusbar.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: app.icns
src-tauri/src/: commands.rs  config.rs  credentials.rs  estimator.rs  keychain.rs  launcher.rs  lib.rs  main.rs  proxy.rs  scheduler.rs  tray.rs  types.rs  vault.rs
src-tauri/src/providers/: codex.rs  kimi.rs
src/providers/: codex.rs  kimi.rs
