[package]
name = "agent-quota-control"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "macOS dashboard for agent quota and launcher control"
license = "MIT"

[lib]
name = "agent_quota_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
security-framework = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
url = "2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"

[dev-dependencies]
tempfile = "3"
